config/kube/tests/app.yaml
############################
# hello-world.yaml
# Deployment and Service for hello-world application with 2 replicas and NodePort service on port 30081 and NLB service on port 80 and 443
############################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 865796477738.dkr.ecr.us-east-1.amazonaws.com/react-backend:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        env:
        - name: DB_HOST
          valueFrom:
            configMapKeyRef:
              name: db-config
              key: DB_HOST
        - name: db
          valueFrom:
            configMapKeyRef:
              name: db-config
              key: DB_HOST
        - name: DB_PORT
          valueFrom:
            configMapKeyRef:
              name: db-config
              key: DB_PORT
        - name: DB_USER
          valueFrom:
            configMapKeyRef:
              name: db-config
              key: DB_USER
        - name: DB_PASSWORD
          valueFrom:
            configMapKeyRef:
              name: db-config
              key: DB_PASSWORD
        resources:
          limits:
            memory: 1024Mi
            cpu: "512m"
          requests:
            memory: 256Mi
            cpu: "254m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 865796477738.dkr.ecr.us-east-1.amazonaws.com/react-frontend:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        env:
        - name: PUBLIC_URL
          value: http://ab44e6aa53498406abcd8a883344d889-6b8bd49e7cbc5ad8.elb.us-east-1.amazonaws.com
        resources:
          limits:
            memory: 1024Mi
            cpu: "750m"
          requests:
            memory: 512Mi
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-nodeport
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30001
  type: NodePort
