config/kube/tests/hello-world-war.yaml
############################
# hello-world.yaml
# Deployment and Service for hello-world application with 2 replicas and NodePort service on port 30081 and NLB service on port 80 and 443
############################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-war-deployment
  labels:
    app: hello-world-war
spec:
  selector:
    matchLabels:
      app: hello-world-war
  replicas: 2
  template:
    metadata:
      labels:
        app: hello-world-war
    spec:
      containers:
      - name: hello-world
        image: 865796477738.dkr.ecr.us-east-1.amazonaws.com/hello-world-war
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 256Mi
            cpu: "250m"
          requests:
            memory: 128Mi
            cpu: "80m"
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-war-nodeport
spec:
  selector:
    app: hello-world-war
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30099
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-war-lb-svc
  labels:
    app: hello-world-war
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
  selector:
    app: hello-world-war
