config/kube/tests/mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-deployment
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.6.4-focal
        ports:
        - containerPort: 3306
        resources:
          limits:
            memory: 512Mi
            cpu: "500m"
          requests:
            memory: 256Mi
            cpu: "200m"
        env:
        - name: MARIADB_USER
          valueFrom:
            configMapKeyRef:
              name: db-config
              key: DB_USER
        - name: MARIADB_PASSWORD
          valueFrom:
            configMapKeyRef:
              name: db-config
              key: DB_PASSWORD
        - name: MARIADB_DATABASE
          value: example
        - name: MARIADB_ROOT_PASSWORD
          valueFrom:
            configMapKeyRef:
              name: db-config
              key: DB_PASSWORD

---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
spec:
  selector:
    app: mariadb
  ports:
  - protocol: TCP
    port: 3306
